# audio_pipeline

./: .gitignore  CMakeLists.txt  Makefile
src/: audio.cpp  audio_component.cpp  sound.cpp
